# chess

./: .pre-commit-config.yaml  pyproject.toml
chess/: constants.py  main.py
chess_analysis/: constants.py  main.py
